# sopti-rusty

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO  TODO.txt  cliff.toml  compose.yaml  fermes.csv  flake.nix  horsage.csv
.gitlab/merge_request_templates/: default.md
aep-schedule-generator/: Cargo.toml  alternance.csv  test.ics
aep-schedule-generator/benches/: generator.rs
aep-schedule-generator/src/: lib.rs  main.rs
aep-schedule-generator/src/algorithm/: conflicts.rs  generation.rs  mod.rs  schedule.rs  schedules.rs  scores.rs  taken_course.rs  taken_courses.rs
aep-schedule-generator/src/data/: course.rs  course_type.rs  courses.rs  group.rs  group_index.rs  group_sigle.rs  groups.rs  mod.rs  period_type.rs
aep-schedule-generator/src/data/notification/: auth_token.rs  email.rs  mod.rs  push_notification.rs  user.rs  users.rs
aep-schedule-generator/src/data/time/: calendar.rs  day.rs  hours.rs  mod.rs  period.rs  week.rs  week_number.rs  weeks.rs
aep-schedule-generator/src/icalendar/: calendar.rs  dates.rs  dates_builder.rs  mod.rs
aep-schedule-generator/src/interface/: mod.rs
aep-schedule-generator/src/tests/: integration.rs
aep-schedule-website/: Cargo.toml  Dockerfile  alternance.csv  compose.yaml  fermes.csv  horsage.csv  tailwind.config.js  test.py
aep-schedule-website/src/: fileserv.rs  lib.rs  main.rs
aep-schedule-website/src/backend/: fileserv.rs  mod.rs  routes.rs  state.rs
aep-schedule-website/src/backend/notification/: auth_token.rs  email.rs  mod.rs  push_notification.rs  user.rs  users.rs
aep-schedule-website/src/backend/shared/: email.rs  mod.rs  notification_method.rs  push_notification.rs  user_builder.rs
aep-schedule-website/src/frontend/: app.rs  mod.rs
aep-schedule-website/style/: common.scss  constant.scss  fonts.scss  main.scss  options.scss  schedule.scss  tailwind.css
backend/src/algorithm/: schedule.rs  scores.rs  taken_course.rs
combinatoric-solver/: Cargo.toml  README.md
combinatoric-solver/src/: collection.rs  item.rs  lib.rs  parameters.rs  score.rs  solver.rs
src/: course.rs  courses.rs  group.rs  main.rs  mod.rs  period.rs  schedule.rs  schedule_course.rs
src/algorithm/: mod.rs  schedule.rs  schedules.rs  taken_course.rs
src/data/: course.rs  courses.rs  group.rs  groups.rs
src/data/time/: day.rs  hours.rs  period.rs  week.rs
src/model/: course.rs  courses.rs  group.rs  mod.rs  period.rs  schedule.rs  schedule_course.rs  schedule_value.rs
src/schedule/: mod.rs  schedule.rs  schedule_course.rs  schedules.rs
(+40 files in other folders)
