[package]
name = "aep_schedule_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = true

[profile.dev]
opt-level = 3
debug = true

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "generator"
harness = false

[dependencies]
compact_str = { version = "0.7.1", features = ["serde"] }
smallvec = { version = "1.11.2", features = ["serde"] }
serde = { version = "1.0.187", features = ["derive", "rc"] }
ical = { version = "0.10.0", features = ["ical", "vcard", "generator"] }
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4"] }
