[package]
name = "aep_schedule_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 3
debug = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "generator"
harness = false

[dependencies]
compact_str = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.187", features = ["derive", "rc"] }
icalendar = { git = "https://github.com/marcantoinem/icalendar-rs", branch = "fix/wrapping-behaviour" }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4"] }
rand = { version = "0.8.5", features = ["std_rng"] }
log = "0.4.21"
